--- a/TinyProjects/Team4/public/index.html
+++ b/TinyProjects/Team4/public/index.html
@@ -10,10 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="2022 FEBase Conference for Web Frontend Developers" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>2022 FEBase Conf</title>
   </head>
   <body>
     <div id="root"></div>
